--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,31 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# Dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# Build
-/build
-/dist
-
-# Environment
-.env
-.env.*
-*.env
+# Node modules
+node_modules/
 
 # Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+logs/
 *.log
+npm-debug.log*
 
-# OS/Editor
+# OS-specific files
 .DS_Store
-.idea/
-.vscode/
 Thumbs.db
 
-# Testing
-/coverage
-/jest-report/
-/cypress/screenshots/
-/cypress/videos/
+# Environment variables
+.env
 
-# Misc
-*.tmp
-.eslintcache
+# Build artifacts and cache
+dist/
+build/
+.tmp/
+.cache/
+
+# IDE-specific files
+.vscode/
+.idea/
+
+/public/images/admin.jpg
+/public/images/Pritika_Giri_CV.pdf
+# Dependency lock files (if you prefer using yarn over npm, ignore the other)
+# Uncomment only if you are not using them for deterministic builds
+# package-lock.json
+# yarn.lock
